исправил swagger docstrings
